# QuoteMA91Bot

./: .env.example  .gitignore  Dockerfile  README.md  TEST.py  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 45f8198bd2b3_initial.py
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  enums.py  item_option.py  llm_log.py  quote_item.py  quote_request.py  search_log.py
app/schemas/: quote.py
app/services/: currency.py  email_poller.py  matcher.py  ranker.py  report_builder.py
app/services/agent/: search_agent.py
app/services/extraction/: price_extractor.py
app/services/llm/: client.py
app/services/parsing/: base.py  dispatcher.py  llm_fallback.py  template_csv.py  template_xlsx.py
app/services/search/: base.py  ebay.py  registry.py  serper.py
app/workers/: celery_app.py  tasks.py
samples/: plantilla_cotizacion.xlsx
tests/: test_matcher_prefilter.py  test_parsers.py
