[project]
name = "quotebot"
version = "0.1.0"
description = "Sistema automatico de cotizaciones con agentes de busqueda web"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "celery[redis]>=5.4",
    "redis>=5",
    "litellm>=1.50",
    "instructor>=1.5",
    "httpx>=0.27",
    "selectolax>=0.3",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-multipart",
    "google-api-python-client",
    "google-auth-oauthlib",
    "structlog>=24",
    "tenacity>=9",
]

[project.optional-dependencies]
fallback = ["playwright"]
dev = ["pytest", "pytest-asyncio", "respx", "ruff"]

[tool.ruff]
line-length = 100
